--- a/app/src/main/res/layout/activity_camion.xml
+++ b/app/src/main/res/layout/activity_camion.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".camion">
+
     <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
@@ -21,7 +22,7 @@
                 android:orientation="vertical">
 
                 <LinearLayout
-                    android:layout_width="370dp"
+                    android:layout_width="395dp"
                     android:layout_height="64dp"
                     android:background="@android:color/background_light"
                     android:orientation="horizontal">
@@ -39,7 +40,7 @@
                     </LinearLayout>
 
                     <LinearLayout
-                        android:layout_width="match_parent"
+                        android:layout_width="277dp"
                         android:layout_height="match_parent"
                         android:orientation="vertical">
 
@@ -60,121 +61,141 @@
                     android:layout_height="match_parent"
                     android:orientation="horizontal">
 
-                    <LinearLayout
-                        android:layout_width="21dp"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical"></LinearLayout>
-
-                    <LinearLayout
+                    <HorizontalScrollView
+                        android:id="@+id/horizontalScrollView"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/your_id"
+                        android:scrollbars="none">
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="76dp"
-                            android:orientation="horizontal">
-
-                            <LinearLayout
-                                android:layout_width="156dp"
-                                android:layout_height="68dp"
-                                android:orientation="vertical">
-
-                                <TextView
-                                    android:id="@+id/textView36"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content" />
-
-                                <TextView
-                                    android:id="@+id/textView34"
-                                    android:layout_width="118dp"
-                                    android:layout_height="wrap_content"
-                                    android:gravity="center"
-                                    android:text="Ruta" />
-
-                                <Spinner
-                                    android:id="@+id/rutass"
-                                    android:layout_width="119dp"
-                                    android:layout_height="27dp"
-                                    android:background="@android:color/holo_blue_dark"
-                                    android:gravity="center"
-
-                                    android:textColor="@android:color/background_light" />
-
-                            </LinearLayout>
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="70dp"
-                                android:orientation="vertical">
-
-                                <TextView
-                                    android:id="@+id/textView38"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content" />
-
-                                <TextView
-                                    android:id="@+id/textView35"
-                                    android:layout_width="117dp"
-                                    android:layout_height="wrap_content"
-                                    android:gravity="center"
-                                    android:text="No. de asiento" />
-
-                                <Spinner
-                                    android:id="@+id/spinner5"
-                                    android:layout_width="119dp"
-                                    android:layout_height="27dp"
-                                    android:background="@android:color/holo_blue_dark"
-                                    android:gravity="center" />
-                            </LinearLayout>
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="275dp"
-                            android:orientation="vertical">
-
-                            <ImageView
-                                android:id="@+id/imageView5"
-                                android:layout_width="286dp"
-                                android:layout_height="match_parent"
-                                app:srcCompat="@drawable/auntob" />
-                        </LinearLayout>
-
-                        <LinearLayout
+                        <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:orientation="horizontal">
+                            android:gravity="center"
+                            android:padding="2dp">
 
                             <LinearLayout
-                                android:layout_width="94dp"
+                                android:layout_width="21dp"
                                 android:layout_height="match_parent"
                                 android:orientation="vertical"></LinearLayout>
 
                             <LinearLayout
-                                android:layout_width="102dp"
+                                android:layout_width="388dp"
                                 android:layout_height="match_parent"
                                 android:orientation="vertical">
 
-                                <TextView
-                                    android:id="@+id/textView39"
+                                <LinearLayout
                                     android:layout_width="match_parent"
-                                    android:layout_height="6dp" />
+                                    android:layout_height="76dp"
+                                    android:orientation="horizontal">
 
-                                <Button
-                                    android:id="@+id/button4"
-                                    android:layout_width="102dp"
-                                    android:layout_height="29dp"
-                                    android:background="@android:color/holo_blue_dark"
-                                    android:text="Finalizar"
-                                    android:textColor="@android:color/background_light" />
+                                    <LinearLayout
+                                        android:layout_width="33dp"
+                                        android:layout_height="match_parent"
+                                        android:orientation="vertical"></LinearLayout>
+
+                                    <LinearLayout
+                                        android:layout_width="198dp"
+                                        android:layout_height="68dp"
+                                        android:orientation="vertical">
+
+                                        <TextView
+                                            android:id="@+id/textView36"
+                                            android:layout_width="match_parent"
+                                            android:layout_height="wrap_content" />
+
+                                        <TextView
+                                            android:id="@+id/textView34"
+                                            android:layout_width="118dp"
+                                            android:layout_height="wrap_content"
+                                            android:gravity="center"
+                                            android:text="Ruta" />
+
+                                        <Spinner
+                                            android:id="@+id/rutass"
+                                            android:layout_width="119dp"
+                                            android:layout_height="27dp"
+                                            android:background="@android:color/holo_blue_dark"
+                                            android:gravity="center"
+
+                                            android:textColor="@android:color/background_light" />
+
+                                    </LinearLayout>
+
+                                    <LinearLayout
+                                        android:layout_width="match_parent"
+                                        android:layout_height="70dp"
+                                        android:orientation="vertical">
+
+                                        <TextView
+                                            android:id="@+id/textView38"
+                                            android:layout_width="match_parent"
+                                            android:layout_height="wrap_content" />
+
+                                        <TextView
+                                            android:id="@+id/textView35"
+                                            android:layout_width="117dp"
+                                            android:layout_height="wrap_content"
+                                            android:gravity="center"
+                                            android:text="No. de asiento" />
+
+                                        <Spinner
+                                            android:id="@+id/spinner5"
+                                            android:layout_width="119dp"
+                                            android:layout_height="27dp"
+                                            android:background="@android:color/holo_blue_dark"
+                                            android:gravity="center" />
+                                    </LinearLayout>
+                                </LinearLayout>
+
+                                <LinearLayout
+                                    android:layout_width="392dp"
+                                    android:layout_height="275dp"
+                                    android:orientation="vertical">
+
+                                    <ImageView
+                                        android:id="@+id/imageView5"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="match_parent"
+                                        app:srcCompat="@drawable/auntob" />
+                                </LinearLayout>
+
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:orientation="horizontal">
+
+                                    <LinearLayout
+                                        android:layout_width="148dp"
+                                        android:layout_height="match_parent"
+                                        android:orientation="vertical"></LinearLayout>
+
+                                    <LinearLayout
+                                        android:layout_width="102dp"
+                                        android:layout_height="match_parent"
+                                        android:orientation="vertical">
+
+                                        <TextView
+                                            android:id="@+id/textView39"
+                                            android:layout_width="match_parent"
+                                            android:layout_height="6dp" />
+
+                                        <Button
+                                            android:id="@+id/button4"
+                                            android:layout_width="102dp"
+                                            android:layout_height="29dp"
+                                            android:background="@android:color/holo_blue_dark"
+                                            android:text="Finalizar"
+                                            android:textColor="@android:color/background_light" />
+
+                                    </LinearLayout>
+                                </LinearLayout>
 
                             </LinearLayout>
-                        </LinearLayout>
-
-                    </LinearLayout>
-
+                        </RelativeLayout>
+                    </HorizontalScrollView>
                 </LinearLayout>
+
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
