--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,9 +49,9 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:gravity="center_vertical"
+                            android:text="Iniciar Sesion"
                             android:textColor="#393d42"
-                            android:textSize="27dp"
-                            android:text="Iniciar Sesion" />
+                            android:textSize="27dp" />
                     </LinearLayout>
                 </LinearLayout>
 
@@ -76,132 +76,103 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="398dp"
                     android:layout_height="198dp"
                     android:orientation="horizontal">
 
 
                     <LinearLayout
-                        android:layout_width="47dp"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="vertical">
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="123dp"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:id="@+id/textView2"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="center" />
-
-                        <TextView
-                            android:id="@+id/textView3"
-                            android:layout_width="match_parent"
-                            android:layout_height="45dp"
-android:gravity="bottom"
-                            android:text="Usuario"
-                            android:textSize="19dp" />
-
-                        <TextView
-                            android:id="@+id/textView5"
-                            android:layout_width="match_parent"
-                            android:layout_height="45dp"
-                            android:gravity="bottom"
-                            android:text="Contraseña"
-
-                            android:textSize="19dp" />
-
-                        <TextView
-                            android:id="@+id/textView40"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
-                            android:layout_height="71dp"
+                            android:layout_height="56dp"
                             android:orientation="horizontal">
 
                             <TextView
-                                android:id="@+id/textView10"
+                                android:id="@+id/user"
+                                android:layout_width="108dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1"
+                                android:gravity="bottom|right"
+                                android:text="Usuario       :"
+                                android:textColor="#393d42"
+                                android:textSize="23dp" />
+
+                            <EditText
+                                android:id="@+id/users"
+                                android:layout_width="109dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1"
+                                android:ems="10"
+                                android:inputType="textPersonName" />
+
+                            <TextView
+                                android:id="@+id/textView5"
                                 android:layout_width="wrap_content"
-                                android:layout_height="58dp"
+                                android:layout_height="56dp"
                                 android:layout_weight="1" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="59dp"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:id="@+id/textView3"
+                                android:layout_width="109dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1"
+                                android:gravity="bottom|right"
+                                android:text="Contraseña :"
+                                android:textColor="#393d42"
+
+                                android:textSize="23dp" />
+
+                            <EditText
+                                android:id="@+id/contraseña"
+                                android:layout_width="111dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1"
+                                android:ems="10"
+                                android:inputType="textPassword" />
+
+                            <TextView
+                                android:id="@+id/textView6"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1" />
+                        </LinearLayout>
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
 
                             <Button
                                 android:id="@+id/in"
-                                android:layout_width="wrap_content"
-                                android:layout_height="38dp"
-                                android:layout_weight="1"
+                                android:layout_width="130dp"
+                                android:layout_height="34dp"
+                                android:layout_alignParentStart="true"
+                                android:layout_centerVertical="true"
+                                android:layout_marginStart="29dp"
                                 android:background="@android:color/holo_blue_dark"
                                 android:text="Iniciar sesion"
-                                android:textColor="#ffffff" />
+                                android:textColor="@android:color/background_light" />
 
-                        </LinearLayout>
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="236dp"
-                        android:layout_height="match_parent"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:id="@+id/textView6"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content" />
-
-                        <EditText
-                            android:id="@+id/editText"
-                            android:layout_width="143dp"
-                            android:layout_height="wrap_content"
-                            android:ems="10"
-                            android:gravity="center"
-                            android:inputType="textPersonName" />
-
-                        <EditText
-                            android:id="@+id/editText2"
-                            android:layout_width="145dp"
-                            android:layout_height="wrap_content"
-                            android:ems="10"
-                            android:gravity="center"
-                            android:inputType="textPassword" />
-
-                        <TextView
-                            android:id="@+id/textView41"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content" />
-
-                        <LinearLayout
-                            android:layout_width="133dp"
-                            android:layout_height="70dp"
-                            android:orientation="horizontal">
-
-                            <LinearLayout
-                                android:layout_width="11dp"
-                                android:layout_height="match_parent"
-                                android:orientation="vertical"></LinearLayout>
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="37dp"
-                                android:orientation="vertical">
-
-                                <Button
-                                    android:id="@+id/re"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:layout_weight="1"
-                                    android:background="@android:color/holo_blue_dark"
-                                    android:text="registrarse"
-                                    android:textColor="#ffffff" />
-                            </LinearLayout>
-                        </LinearLayout>
-
+                            <Button
+                                android:id="@+id/re"
+                                android:layout_width="130dp"
+                                android:layout_height="34dp"
+                                android:layout_alignParentEnd="true"
+                                android:layout_centerVertical="true"
+                                android:layout_marginEnd="98dp"
+                                android:background="@android:color/holo_blue_dark"
+                                android:text="registrarse"
+                                android:textColor="@android:color/background_light" />
+                        </RelativeLayout>
                     </LinearLayout>
 
                 </LinearLayout>
