--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -137,42 +137,42 @@
                             android:layout_height="wrap_content" />
 
                         <EditText
-                            android:id="@+id/editText3"
+                            android:id="@+id/user"
                             android:layout_width="match_parent"
                             android:layout_height="57dp"
                             android:ems="10"
                             android:inputType="textPersonName" />
 
                         <EditText
-                            android:id="@+id/editText"
+                            android:id="@+id/names"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:ems="10"
                             android:inputType="textPersonName" />
 
                         <EditText
-                            android:id="@+id/editText9"
+                            android:id="@+id/tel"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:ems="10"
                             android:inputType="phone" />
 
                         <EditText
-                            android:id="@+id/editText10"
+                            android:id="@+id/correo"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:ems="10"
                             android:inputType="textEmailAddress" />
 
                         <EditText
-                            android:id="@+id/editText12"
+                            android:id="@+id/pass"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:ems="10"
                             android:inputType="textPassword" />
 
                         <EditText
-                            android:id="@+id/editText13"
+                            android:id="@+id/pass2"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:ems="10"
@@ -188,7 +188,8 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="196dp"
+                    android:background="@drawable/stilo"
                     android:orientation="horizontal">
 
                     <LinearLayout
