--- a/app/src/main/res/layout/activity_rutas.xml
+++ b/app/src/main/res/layout/activity_rutas.xml
@@ -49,7 +49,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="388dp"
+            android:layout_height="417dp"
             android:orientation="horizontal">
 
             <HorizontalScrollView
@@ -112,9 +112,6 @@
                     </android.support.v7.widget.CardView>
 
 
-
-
-
                     <android.support.v7.widget.CardView
                         android:id="@+id/cardTwo"
                         android:layout_width="400dp"
@@ -140,6 +137,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@drawable/stilo"
             android:orientation="horizontal"></LinearLayout>
 
     </LinearLayout>
