--- a/app/src/main/res/layout/activity_camion.xml
+++ b/app/src/main/res/layout/activity_camion.xml
@@ -70,24 +70,25 @@
                                 android:orientation="vertical">
 
                                 <LinearLayout
-                                    android:layout_width="match_parent"
+                                    android:layout_width="wrap_content"
+                                    android:layout_gravity="center"
                                     android:layout_height="40dp"
                                     android:orientation="horizontal">
 
 
                                     <TextView
                                         android:id="@+id/textView5"
-                                        android:layout_width="100dp"
+                                        android:layout_width="80dp"
                                         android:layout_height="match_parent"
                                         android:layout_margin="9dp"
                                         android:gravity="bottom"
                                         android:text="Ruta"
                                         android:textColor="#393d42"
-                                        android:textSize="18dp" />
+                                        android:textSize="20dp" />
 
                                     <Spinner
                                         android:id="@+id/rutass"
-                                        android:layout_width="120dp"
+                                        android:layout_width="130dp"
                                         android:layout_height="match_parent"
                                         android:layout_margin="5dp"
                                         android:background="@drawable/spinerss" />
@@ -96,23 +97,24 @@
                                 </LinearLayout>
 
                                 <LinearLayout
-                                    android:layout_width="match_parent"
+                                    android:layout_width="wrap_content"
                                     android:layout_height="40dp"
+                                    android:layout_gravity="center"
                                     android:orientation="horizontal">
 
                                     <TextView
                                         android:id="@+id/lugar"
-                                        android:layout_width="100dp"
+                                        android:layout_width="80dp"
                                         android:layout_height="match_parent"
                                         android:layout_margin="9dp"
                                         android:gravity="bottom"
                                         android:text="Asiento"
                                         android:textColor="#393d42"
-                                        android:textSize="18dp" />
+                                        android:textSize="20dp" />
 
                                     <Spinner
                                         android:id="@+id/spinner2"
-                                        android:layout_width="120dp"
+                                        android:layout_width="130dp"
                                         android:layout_height="match_parent"
                                         android:layout_margin="5dp"
                                         android:background="@drawable/spinerss" />
