--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -122,7 +122,7 @@
 
                             <TextView
                                 android:id="@+id/textView3"
-                                android:layout_width="wrap_content"
+                                android:layout_width="130dp"
                                 android:layout_height="match_parent"
 
                                 android:gravity="bottom"
