--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="71dp"
+                    android:layout_height="60dp"
                     android:background="@android:color/background_light"
                     android:orientation="horizontal">
 
@@ -43,6 +43,13 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="vertical">
+
+                        <ProgressBar
+                            android:id="@+id/progreso"
+                            style="?android:attr/progressBarStyle"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:visibility="gone"/>
 
                         <TextView
                             android:id="@+id/textView11"
@@ -98,7 +105,7 @@
 
                             <TextView
                                 android:id="@+id/user"
-                                android:layout_width="130dp"
+                                android:layout_width="90dp"
                                 android:layout_height="40dp"
                                 android:gravity="center"
                                 android:text="Usuario:"
@@ -107,7 +114,7 @@
 
                             <EditText
                                 android:id="@+id/users"
-                                android:layout_width="150dp"
+                                android:layout_width="190dp"
                                 android:layout_height="match_parent"
                                 android:background="@android:color/transparent"
                                 android:ems="10"
