--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -170,7 +170,7 @@
                             android:layout_height="10dp" />
 
                         <Switch
-                            android:id="@+id/switch2"
+                            android:id="@+id/cambio"
                             android:layout_width="258dp"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
