--- a/app/src/main/res/layout/content_menu.xml
+++ b/app/src/main/res/layout/content_menu.xml
@@ -33,7 +33,15 @@
             android:textColor="#393d42"
             android:textSize="27dp" />
 
+
+
     </LinearLayout>
+    <ProgressBar
+        android:id="@+id/progreso"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"/>
     <WebView
         android:id="@+id/we"
         android:layout_width="match_parent"
