--- a/app/src/main/res/layout/activity_paypal.xml
+++ b/app/src/main/res/layout/activity_paypal.xml
@@ -55,6 +55,16 @@
         android:textSize="18dp" />
 
 
+    <Spinner
+        android:id="@+id/rutass"
+        android:layout_width="280dp"
+        android:layout_height="40dp"
+        android:layout_gravity="center"
+        android:background="@android:drawable/btn_dropdown" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="30dp" />
+
     <Button
         android:id="@+id/order"
         android:layout_width="250dp"
