--- a/app/src/main/res/layout/activity_recuperar.xml
+++ b/app/src/main/res/layout/activity_recuperar.xml
@@ -66,14 +66,30 @@
                 android:inputType="textEmailAddress" />
 
             <TextView
-                android:id="@+id/textView10"
+
+                android:layout_width="match_parent"
+                android:layout_height="29dp"
+                android:gravity="center"
+                android:textSize="20dp" />
+
+            <EditText
+                android:id="@+id/passw1"
+                android:layout_width="250dp"
+                android:layout_height="36dp"
+                android:layout_gravity="center"
+                android:background="@drawable/conotor"
+                android:ems="10"
+                android:inputType="textEmailAddress" />
+
+            <TextView
+
                 android:layout_width="match_parent"
                 android:layout_height="33dp"
                 android:gravity="center"
                 android:textSize="20dp" />
 
             <EditText
-                android:id="@+id/correo2"
+                android:id="@+id/passw2"
                 android:layout_width="250dp"
                 android:layout_height="36dp"
                 android:layout_gravity="center"
